--- a/A2/README
+++ b/A2/README
@@ -1,6 +1,6 @@
 THIS ASSIGNMENT WAS WORKED ON BY THE FOLLOWING PARTNERS:
-- MUHAMMAD AWAIS QURESHI (100972618)
-- YIN YUEN LENG (100993814)
+- MUHAMMAD AWAIS QURESHI
+- YIN YUEN LENG
 
 PURPOSE: To modify the bookstore management program from either Assignment #1 or from the base code to store the courses in a linked list. Also to modify the “add course” feature, and add a “delete course” feature.
 
