--- a/A4/README
+++ b/A4/README
@@ -1,6 +1,6 @@
 THIS ASSIGNMENT WAS WORKED ON BY THE FOLLOWING PARTNERS:
-- MUHAMMAD AWAIS QURESHI (100972618)
-- YIN YUEN LENG (100993814)
+- MUHAMMAD AWAIS QURESHI
+- YIN YUEN LENG
 
 PURPOSE:  Modifying the bookstore management program from Assignment #3 to implement a templated collection class. Also, to incorprate polymorphism and an abstract class into our program
 
