--- a/A1/README
+++ b/A1/README
@@ -1,6 +1,6 @@
 THIS ASSIGNMENT WAS WORKED ON BY THE FOLLOWING PARTNERS:
-- MUHAMMAD AWAIS QURESHI (100972618)
-- YIN LENG (100993814)
+- MUHAMMAD AWAIS QURESHI
+- YIN LENG
 
 - PURPOSE: TO MODIFY THE BASE CODE TO USE DYNAMICALLY ALLOCATED MEMORY AND IMPLEMENT TWO NEW FEATURES.
 
