--- a/A3/README
+++ b/A3/README
@@ -1,6 +1,6 @@
 THIS ASSIGNMENT WAS WORKED ON BY THE FOLLOWING PARTNERS:
-- MUHAMMAD AWAIS QURESHI (100972618)
-- YIN YUEN LENG (100993814)
+- MUHAMMAD AWAIS QURESHI
+- YIN YUEN LENG
 
 PURPOSE:  To modify the bookstore management program from Assignment #2 implement overloaded operators on some classes and establish an inheritance hierarchy of bookstore products.
 
